--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_ServerUrl = '/api/'
-REACT_APP_JWT_Secret = 'jwt-secret-key'
+REACT_APP_SERVER_URL = '/api/'
+REACT_APP_JWT_SECRET = 'jwt-secret-key'
